2005-09-28  Jan Beulich  <jbeulich@novell.com>

	* ld-x86-64/tlspic.dd: Adjust.

2005-09-01  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris: Skip tests unsuitable for testing target
	cris-axis-linux-gnu.

2005-08-18  David Daney  <ddaney@avtrex.com>

	* ld-mips-elf/multi-got-1.d: Adjust for new ld behavior.
	* ld-mips-elf/multi-got-no-shared.d: Likewise.
	* ld-mips-elf/rel32-n32.d: Likewise.
	* ld-mips-elf/rel32-o32.d: Likewise.
	* ld-mips-elf/rel64.d: Likewise.

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-d10v/default_layout.d: Adjust for section removal.
	* ld-elf/empty.s: Define "main".
	* ld-elf/frame.exp: Don't run for hppa64 and v850.
	* ld-elf/group1.d: xfail various targets.
	* ld-elf/merge.d: Likewise.
	* ld-elf/merge2.d: Likewise.
	* ld-elf/warn1.d: Likewise.
	* ld-scripts/defined2.d: Likewise.
	* ld-scripts/defined3.d: Likewise.
	* ld-scripts/empty-aligned.d: Likewise.
	* ld-scripts/size-2.d: Likewise.
	* ld-scripts/weak.exp: Likewise.
	* ld-selective/sel-dump.exp: Likewise.
	* ld-undefined/weak-undef.exp: Likewise.

2005-08-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/crossref.exp: Remove a29k support.
	* ld-srec/srec.exp: Likewise.

2005-08-17  Jakub Jelinek  <jakub@redhat.com>

	* lib/ld-lib.exp (default_ld_compile): Append $cc arguments after
	$CFLAGS instead of prepending them.

	* ld-elfvers/vers.exp: Add a new test, vers30.
	* ld-elfvers/vers30.c: New file.
	* ld-elfvers/vers30.map: New file.
	* ld-elfvers/vers30.ver: New file.
	* ld-elfvers/vers30.dsym: New file.

2005-08-17  Alan Modra  <amodra@bigpond.net.au>

	* ld-alpha/tlsbin.rd: Update.
	* ld-alpha/tlsbinr.rd: Update.
	* ld-cris/locref1.d: Update.
	* ld-cris/locref2.d: Update.
	* ld-i386/tlsbin.rd: Update.
	* ld-ia64/tlsbin.rd: Update.
	* ld-powerpc/tlsexe.r: Update.
	* ld-powerpc/tlsexe32.r: Update.
	* ld-powerpc/tlsexetoc.r: Update.
	* ld-s390/tlsbin.rd: Update.
	* ld-s390/tlsbin_64.rd: Update.
	* ld-sparc/tlssunbin32.rd: Update.
	* ld-sparc/tlssunbin64.rd: Update.